--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -60,7 +60,7 @@
         {% endif %}
         <div class="row sub-filter">
                 <div class="col-lg-12 subtitle">
-                    MODULE <i
+                    ABIOTIC MODULE <i
                         class="fa fa-angle-up pull-right filter-icon-arrow"></i><i
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
@@ -69,11 +69,11 @@
                  data-toggle="tooltip" data-placement="top" class="thermal-module-filters-wrapper">
                 <div class="form-check module-checkbox-wrapper">
                     <input type="checkbox" class="form-check-input" id="thermal-module-filter">
-                    <label class="form-check-label" for="thermal-module-filter">Temperature</label>
+                    <label class="form-check-label" for="thermal-module-filter">Water Temperature (time series)</label>
                 </div>
                 <div class="form-check module-checkbox-wrapper">
                     <input type="checkbox" class="form-check-input" id="abiotic-data-filter">
-                    <label class="form-check-label" for="abiotic-data-filter">Abiotic Data</label>
+                    <label class="form-check-label" for="abiotic-data-filter">Physico-chemistry</label>
                 </div>
                 <div class="button-filter-wrapper button-filter-module">
                     <button class="apply-filter"><i class="fa fa-check"
