--- a/sass/templates/sass_dashboard_single_site.html
+++ b/sass/templates/sass_dashboard_single_site.html
@@ -454,19 +454,19 @@
                     {% if is_chem_exists  %}
                     <div class="vertical-space"></div>
                     <div class="chart-container" id="chem-chart-wrapper">
-                        <div class="chart-title">Abiotic Data
+                        <div class="chart-title">Physico-chemical data
                             <div class="btn-group pull-right">
                                 <i data-placement="left" data-toggle="dropdown" aria-haspopup="true"
                                    aria-expanded="false" title="Download chart as svg which you can insert the svg to excel or word"
                                    class="fa fa-download pull-right download-icon" ></i>
                                 <div class="dropdown-menu">
-                                    <a class="download-chart-new btn dropdown-item" data-download-title="Abiotic Data - COND"
+                                    <a class="download-chart-new btn dropdown-item" data-download-title="Physico-chemical data - COND"
                                                data-download-chart="COND" >Download Conductivity (mS/m)</a>
-                                    <a class="download-chart-new btn dropdown-item" data-download-title="Abiotic Data - TEMP"
+                                    <a class="download-chart-new btn dropdown-item" data-download-title="Physico-chemical data - TEMP"
                                                data-download-chart="TEMP" >Download Temperature (degrees C) </a>
-                                    <a class="download-chart-new btn dropdown-item" data-download-title="Abiotic Data - pH"
+                                    <a class="download-chart-new btn dropdown-item" data-download-title="Physico-chemical data - pH"
                                                data-download-chart="PH" >Download pH </a>
-                                    <a class="download-chart-new btn dropdown-item" data-download-title="Abiotic Data - DO"
+                                    <a class="download-chart-new btn dropdown-item" data-download-title="Physico-chemical data - DO"
                                        data-download-chart="DO" >Download Oxygen: dissolved (mg/l)</a>
                                 </div>
 
