Add threshold calculation

--- a/bims/templates/thermal/indicators_of_thermal_alteration.html
+++ b/bims/templates/thermal/indicators_of_thermal_alteration.html
@@ -142,6 +142,32 @@
     </div>
 </div>
 
+<div class="row row-indicator">
+    <div class="col-lg-4">
+        <div class="col-header">
+            Frequency and duration (successive days exceeding thresholds) of
+            extreme water temperature conditions
+        </div>
+        <p>Mean7cnt</p>
+        <p>Min7cnt</p>
+        <p>Max7cnt</p>
+        <p>Mean7dur</p>
+        <p>Min7dur</p>
+        <p>Max7dur</p>
+    </div>
+    <div class="col-lg-3">
+        <div class="col-header">
+            &nbsp;<div>&nbsp;</div><div>&nbsp;</div>
+        </div>
+        <p>{{ indicators.threshold.weekly_mean }}</p>
+        <p>{{ indicators.threshold.weekly_min }}</p>
+        <p>{{ indicators.threshold.weekly_max }}</p>
+        <p>{{ indicators.threshold.weekly_mean_dur }}</p>
+        <p>{{ indicators.threshold.weekly_min_dur }}</p>
+        <p>{{ indicators.threshold.weekly_max_dur }}</p>
+    </div>
+</div>
+
 </div>
 
 <script>
