--- a/bims/templates/source_references/source_reference_select.html
+++ b/bims/templates/source_references/source_reference_select.html
@@ -1,5 +1,18 @@
 <div style="margin-bottom: 20px;">
-    <h4>Source References Select</h4>
+
+   <div class="form-group row  clockpicker-container">
+       <label for="start-time"
+              class="col-sm-2 col-form-label col-form-label">Selected Source Reference</label>
+       <div class="col-sm-10">
+           <div class="input-group">
+               <textarea class="form-control" id="selected-source-reference" name="source_reference_title" disabled> </textarea>
+               <input type="hidden" id="selected-source-reference-id" name="source_reference">
+           </div>
+       </div>
+   </div>
+
+    <h4>Choose Source Reference</h4>
+    <hr class="hr-normal"/>
     <div class="row">
         <div class="col-3">
             <div class="input-group md-form form-sm form-2 pl-0" style="margin-bottom: 10px;">
@@ -19,7 +32,6 @@
         </div>
         <div class="col-9">
             <div id="source-reference-list-container">
-
             </div>
         </div>
     </div>
@@ -30,6 +42,9 @@
         max-height: 500px;
         min-height: 500px;
         overflow-y: auto;
+    }
+    .select-source-reference {
+        cursor: pointer;
     }
 </style>
 
@@ -53,7 +68,7 @@
         <div class="card-footer">
             <div class="card-text">
                 <div class="float-right">
-                    <a href="#" class="badge badge-primary badge-occurrences">Select</a>
+                    <div class="badge badge-primary select-source-reference" onclick="selectSourceReference(<%= data.id %>)">Select</div>
                 </div>
             </div>
         </div>
@@ -63,6 +78,8 @@
 <script>
     let currentType = 'document';
     let currentQuery = '';
+    let selectedSourceReference = null;
+    let sourceReferences = {};
 
     function getSourceReferenceList(type = '', query = '') {
         if (type) {
@@ -75,9 +92,11 @@
         $sourceReferenceListContainer.html('Fetching data...');
         $.get(`/api/source-reference-list?type=${currentType}&q=${currentQuery}`, function (data) {
           $sourceReferenceListContainer.html('');
+          sourceReferences = {};
           if (data['results'].length > 0) {
             for (let i = 0; i < data['results'].length; i++) {
               let result = data['results'][i];
+              sourceReferences[result.id] = result;
               let sourceReferenceCard = _.template($('#source-reference-card').html());
               $sourceReferenceListContainer.append(sourceReferenceCard({
                 data: result,
@@ -104,6 +123,12 @@
       let value = $('#search-input').val();
       getSourceReferenceList('', value);
     })
+
+    function selectSourceReference(sourceReferenceId) {
+      selectedSourceReference = sourceReferences[sourceReferenceId];
+      $('#selected-source-reference').val(`(${selectedSourceReference.reference_type}) - ${selectedSourceReference.title}`);
+      $('#selected-source-reference-id').val(selectedSourceReference.id);
+    }
 
     getSourceReferenceList(currentType);
 
