--- a/bims/templates/water_temperature_form.html
+++ b/bims/templates/water_temperature_form.html
@@ -26,6 +26,8 @@
         const bingKey = '{{ bing_key }}';
     </script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <style>
         .alert-danger {
             max-height: 300px;
@@ -129,16 +131,15 @@
             </div>
             <div class="form-group row">
                 <label for="date"
-                       class="col-sm-2 col-form-label col-form-label">Date Format</label>
+                       class="col-sm-2 col-form-label col-form-label required-text">Date Format</label>
                 <div class="col-sm-10">
                     <select class="form-control"
-                            name="format" id="format-date">
+                            name="format" id="format-date" required>
                             <option value="%Y-%m-%d">YYYY-MM-DD</option>
                             <option value="%m-%d-%Y">MM-DD-YYYY</option>
                             <option value="%d-%m-%Y">DD-MM-YYYY</option>
                             <option value="%Y/%m/%d">YYYY/MM/DD</option>
                             <option value="%m/%d/%Y">MM/DD/YYYY</option>
-                            <option value="%d/%m/%Y">DD/MM/YYYY</option>
                             <option value="%d/%m/%Y">DD/MM/YYYY</option>
                             <option value="%d-%b-%Y">01-Jan-2021</option>
                             <option value="%d-%b-%y">01-Jan-21</option>
@@ -155,7 +156,7 @@
                         <div class="input-group input-file">
                             <input type="file" class="form-control"
                                    accept=".csv" name="water_file" id="water_file"
-                                   placeholder='Choose a file...'/>
+                                   placeholder='Choose a file...' required/>
 {#                            <div class="invalid-feedback">#}
 {#                            Please provide a xlsx file#}
 {#                        </div>#}
@@ -164,6 +165,9 @@
                     </div>
                 </div>
             </div>
+
+            {% include 'source_references/source_reference_select.html' %}
+
             <div class="disclaimer" style="margin-bottom: 10px;">
                 <div class="card">
                     <div class="card-body">
@@ -205,7 +209,6 @@
 {% block foot %}
 
     <!-- Plugin JavaScript -->
-    <script src="{% static "js/libs/jquery/jquery-3.3.1.min.js" %}"></script>
     <script src="{% static "js/libs/openlayers-4.6.4/ol.js" %}"></script>
     <script src="{% static "js/libs/bootstrap-4.0.0/js/bootstrap.min.js" %}"></script>
     <script src="{% static 'js/non_requirejs/water_temperature_form.js' %}"></script>
