Add download button for flow_type layer

--- a/bims/static/css/main.css
+++ b/bims/static/css/main.css
@@ -130,3 +130,9 @@
     height: -moz-calc(100% - 51px); /* firefox */
     overflow: auto;
 }
+
+.btn-xs {
+    font-size: 9pt;
+    padding-top: 0;
+    padding-bottom: 0;
+}
