--- a/bims/templates/water_temperature_form.html
+++ b/bims/templates/water_temperature_form.html
@@ -166,6 +166,21 @@
                 </div>
             </div>
 
+            <div class="form-group row">
+                <label for="date"
+                       class="col-sm-2 col-form-label col-form-label">Site Image</label>
+                <div class="col-sm-10">
+                    <div class="form-group">
+                        <div class="input-group input-file">
+                            <input type="file" class="form-control"
+                                   accept="image/*" name="site_image" id="site_image"
+                                   placeholder='Choose a file...'/>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
             {% include 'source_references/source_reference_select.html' %}
 
             <div class="disclaimer" style="margin-bottom: 10px;">
